Revision history for Music-ScaleNote

{{$NEXT}}

0.0507 2019-09-01 14:47:22
    - Improve documentation.
    - Add a scale_note not defined test case.

0.0506 2019-09-01 06:21:48
    - Clean-up code and test.
    - Croak on an undefined scale position.

0.0505 2019-09-01 05:13:17
    - Improve SYNOPSIS.
    - Improve documentation again.

0.0504 2019-09-01 04:59:37
    - Clean-up code slightly.
    - Improve documentation slightly.
    - Improve SYNOPSIS.

0.0503 2019-09-01 04:39:21
    - Clean-up code again.
    - Improve documentation.

0.0502 2019-09-01 04:10:03
    - Improve documentation.
    - Add test cases.
    - Clean-up code.

0.0501 2019-05-05 13:46:48
    - Improve documentation.
    - Add test cases.

0.0500 2019-01-06 20:17:00
    - Fix the offset isa regex.

0.0401 2019-01-06 19:54:30
    - Improve the documentation a bit.

0.0400 2019-01-06 19:28:32
    - Add defaults for all attributes.
    - Improve the documentation.
    - Remove unnecessary test.

0.0303 2018-04-09 14:49:54
    - Improve the documentation ever so slightly.

0.0302 2018-04-08 02:59:27
    - Allow default note_format and offset values to be set in the constructor.

0.0301 2018-04-04 19:13:22
    - Remove the unnecessary octave boundaries.

0.03 2018-04-04 16:54:37
    - Check for enharmonic equivalent matches too!

0.0202 2018-04-04 15:31:05
    - Added missing defined keyword!
    - Improved verbose output.

0.0201 2018-04-04 15:08:58
    - Improve documentation.

0.02 2018-04-04 14:48:18
    - Added boundary checks.
    - Added the verbose attribute.

0.0103 2018-04-03 21:28:13
    - Added the missing scale_name attribute default.
    - Reword the package abstract.

0.0102 2018-04-03 20:48:38
    - Band-aid code boundary case...

0.0101 2018-04-03 19:31:28
    - Minor fix to the documentation.

0.01 2018-04-03 19:24:46
    - Minted by Dist::Zilla.